--- a/index.html
+++ b/index.html
@@ -15,54 +15,66 @@
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+  <!-- Navbar -->  
+  <nav class="navbar navbar-expand-lg fixed-top px-5" id="navbar">
+    <div class="container-fluid ">
+      <a class="navbar-brand text-white" href="#"><img src="assets/img/viajes.svg" alt="Logo" width="50">Viajes Chile</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon "></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link text-white" aria-current="page" href="#">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link text-white" href="#">Quienes Somos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link text-white" href="#">Destacados</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <a class="nav-link text-white" href="#">Contacto</a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> 
 
   <!-- Banner -->
   <section>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="assets/img/carousel1.jpg" class="d-block w-100" alt="alpacas">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="assets/img/carousel2.jpg" class="d-block w-100" alt="moais">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="assets/img/carousel3.jpg" class="d-block w-100" alt="pinguino">
         </div>
       </div>
     </div>
   </section>
   <!-- Text section -->
   <section>
-    <div>
-      <p></p>
-      <p></p>
-      <p></p>
+    <div class="container p-5">
+      <h2 class="text-white text-center pb-5">¿QUIÉNES SOMOS?</h2>
+      <div class="row col-12 m-auto">
+      <p class="col-md-4 col-sm-12 text-white">
+        <span class="bg-info d-block text-center"><i class="fa-solid fa-plane"></i></span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam voluptatibus quis tenetur nulla sed ut eligendi consequuntur labore, error adipisci porro a, iste distinctio perspiciatis alias maxime commodi? Expedita, quam.
+      </p>
+      <p class="col-md-4 col-sm-12 text-white">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati laboriosam maxime ipsam reprehenderit ullam cupiditate. Nulla fuga harum id reiciendis commodi magnam amet, nihil accusamus, facere ipsa laudantium ab voluptas.
+        <span class="bg-info d-block text-center"><i class="fa-solid fa-mountain"></i></span>
+      </p>
+      <p class="col-md-4 col-sm-12 text-white">
+        <span class="bg-info d-block text-center"><i class="fa-solid fa-route"></i></span>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto deserunt nam officiis quas reprehenderit sed molestias eligendi culpa voluptas. Cumque quam rem fugit error nisi, beatae deleniti illo nesciunt sit?
+      </p>
+    </div>
     </div>
   </section>
   <!-- Card section -->
@@ -116,6 +128,8 @@
     
   </footer>
 
+  <!-- Conexión hoja script -->
+  <script src="assets/js/script.js"></script>
   <!-- Script bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
