--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- Navbar -->  
-  <nav class="navbar navbar-expand-lg fixed-top px-5" id="navbar">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top px-5" id="navbar">
     <div class="container">
       <a class="navbar-brand text-white" href="#"><img src="assets/img/viajes.svg" alt="Logo" width="50">Viajes Chile</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -127,17 +127,18 @@
     <div class="col-10 justify-content-center m-auto p-1">
       <div class="mb-3 text-white">
         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
-        <input type="input" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <input type="input" class="form-control" id="exampleFormControlInput1">
       </div>
       <div class="mb-3 text-white">
         <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-        <input type="input" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <input type="input" class="form-control" id="exampleFormControlInput1">
       </div>
       <div class="mb-3 text-white">
         <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
       </div>
-      <button type="button" class="btn btn-info text-white mb-5">Enviar</button>
+      <div id="liveAlertPlaceholder"></div>
+      <button type="button" class="btn btn-info text-white mb-5" id="liveAlertBtn">Enviar</button>
     </div>
     
   </section>
@@ -150,10 +151,10 @@
           <h3 class="fw-lighter text-white">VIAJES CHILE</h3>
         </div>
         <div class="text-white">
-          <a href=""><i class="fa-brands fa-square-github text-white fs-2 ms-2"></i></a>
-          <a href=""><i class="fa-brands fa-linkedin text-white fs-2 ms-2"></i></a>
-          <a href=""><i class="fa-brands fa-square-x-twitter text-white fs-2 ms-2"></i></a>
-          <a href=""><i class="fa-brands fa-square-facebook text-white fs-2 ms-2"></i></a>
+          <a href="https://github.com/"><i class="fa-brands fa-square-github text-white fs-2 ms-2"></i></a>
+          <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin text-white fs-2 ms-2"></i></a>
+          <a href="https://twitter.com/"><i class="fa-brands fa-square-x-twitter text-white fs-2 ms-2"></i></a>
+          <a href="https://facebook.com/"><i class="fa-brands fa-square-facebook text-white fs-2 ms-2"></i></a>
         </div>
       </div>
     </div>
